@@ -1,14 +1,14 @@
 Package: mboost
 Title: Model-Based Boosting
-Date: 2010-02-01
+Date: 2010-03-01
 Version: 2.0-1
 Author: Torsten Hothorn, Peter Buehlmann, Thomas Kneib, Matthias Schmid and
   Benjamin Hofner
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Description: Functional gradient descent algorithm
-  (boosting) for optimizing general risk functions utilizing 
-  component-wise (penalised) least squares estimates or regression 
-  trees as base-learners for fitting generalized linear, additive 
+  (boosting) for optimizing general risk functions utilizing
+  component-wise (penalised) least squares estimates or regression
+  trees as base-learners for fitting generalized linear, additive
   and interaction models to potentially high-dimensional data.
 Depends: R (>= 2.9.0), methods, stats
 Imports: Matrix, survival, splines, lattice
